--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -5,6 +5,7 @@ $clr2: #d1d5e5;
 $clr3: #797a7d;
 $clr4: #d6dae8;
 $clr5: #3080c6;
+$clr6: #666666;
 $bg-clr1: #0073ea;
 $bg-clr1-darker: #0060b9;
 $bg-clr2: #292f4c; //side-bar
@@ -20,6 +21,7 @@ $input-hover-border-clr: #c3c6d4;
 $button-hover-bgc: #dcdfec;
 $button-clicked-bgc: #cce5ff;
 $icon-color: #676879;
+$link-color: #1f76c2;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
