--- a/frontend/src/assets/styles/views/_home-page.scss
+++ b/frontend/src/assets/styles/views/_home-page.scss
@@ -179,7 +179,7 @@
 			.icon-container {
 				flex-grow: 1;
 				display: flex;
-				align-items: end;
+				align-items: flex-end;
 			}
 
 			span {
